# hri_engagement

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/: 00-default.yaml
hri_engagement/: engagement_node.py
launch/: hri_engagement.launch  hri_engagement.launch.py
module/: hri_engagement  hri_engagement_module.yaml
script/: demo.py  engagement_monitor  engagement_node  engagement_node.py
src/hri_engagement/: engagement_node.py
test/: _test_complex_hri_engagement.py  test_complex_hri_engagement.py  test_hri_engagement.py  test_hri_engagement.test  test_hri_engagement_synth_data.test  test_simple_hri_engagement.py  test_synth_data.py
test/_obsolete_tests/: _test_complex_hri_engagement.py
test/_obsolete_tests/complex_bags/1p_AA_dis_1/: 1p_AA_dis_1.db3
test/_obsolete_tests/complex_bags/1p_AA_eng_2/: metadata.yaml
test/_obsolete_tests/complex_bags/1p_FV_dis_1/: 1p_FV_dis_1.db3
test/_obsolete_tests/complex_bags/1p_FV_dis_2/: metadata.yaml
test/_obsolete_tests/complex_bags/1p_FV_eng_2/: 1p_FV_eng_2.db3
test/_obsolete_tests/complex_bags/2p_AA_FV_dis_1/: 2p_AA_FV_dis_1.db3
test/_obsolete_tests/complex_bags/2p_AA_FV_eng_1/: 2p_AA_FV_eng_1.db3
test/_obsolete_tests/complex_bags/2p_AA_FV_eng_2/: metadata.yaml
test/_obsolete_tests/data/bag_2_disengaged/: bag_2_disengaged_0.db3
test/complex_bags/: 1p_AA_dis_1.bag  1p_AA_dis_2.bag  1p_FV_dis_2.bag  1p_FV_eng_1.bag  1p_GA_dis_1.bag  1p_GA_dis_2.bag  1p_GA_eng_1.bag  1p_GA_eng_2.bag
test/complex_bags/1p_AA_dis_2/: metadata.yaml
test/complex_bags/1p_AA_eng_1/: 1p_AA_eng_1.db3
test/complex_bags/1p_FV_dis_1/: metadata.yaml
test/complex_bags/1p_FV_eng_1/: 1p_FV_eng_1.db3  metadata.yaml
test/complex_bags/1p_FV_eng_2/: metadata.yaml
test/complex_bags/1p_GA_dis_1/: 1p_GA_dis_1.db3
test/complex_bags/1p_GA_dis_2/: 1p_GA_dis_2.db3
test/complex_bags/1p_GA_eng_1/: 1p_GA_eng_1.db3  metadata.yaml
test/complex_bags/2p_AA_FV_eng_2/: 2p_AA_FV_eng_2.db3
test/data/bag_1_engaged/: bag_1_engaged_0.db3
test/data/bag_2_disengaged/: metadata.yaml
test/hri_engagement_bags/: 1p_AA_eng_1.bag  1p_AA_eng_2.bag  1p_FV_dis_1.bag  1p_FV_eng_2.bag  2p_AA_FV_dis_1.bag  2p_AA_FV_dis_2.bag  2p_AA_FV_eng_1.bag  2p_AA_FV_eng_2.bag
test/obsolete_tests/: bag.json
test/obsolete_tests/complex_bags/: list_of_bags.json
test/obsolete_tests/complex_bags/1p_AA_dis_1/: metadata.yaml
test/obsolete_tests/complex_bags/1p_AA_dis_2/: 1p_AA_dis_2.db3
test/obsolete_tests/complex_bags/1p_AA_eng_1/: metadata.yaml
test/obsolete_tests/complex_bags/1p_AA_eng_2/: 1p_AA_eng_2.db3
test/obsolete_tests/complex_bags/1p_FV_dis_2/: 1p_FV_dis_2.db3
test/obsolete_tests/complex_bags/1p_GA_dis_1/: metadata.yaml
test/obsolete_tests/complex_bags/1p_GA_dis_2/: metadata.yaml
test/obsolete_tests/complex_bags/1p_GA_eng_2/: 1p_GA_eng_2.db3  metadata.yaml
test/obsolete_tests/complex_bags/2p_AA_FV_dis_1/: metadata.yaml
test/obsolete_tests/complex_bags/2p_AA_FV_dis_2/: 2p_AA_FV_dis_2.db3  metadata.yaml
test/obsolete_tests/complex_bags/2p_AA_FV_eng_1/: metadata.yaml
test/obsolete_tests/data/bag_1_engaged/: metadata.yaml
test/simple_bags/: 1p_AA_DIS_1.bag  1p_AA_DIS_2.bag  1p_AA_ENG_1.bag  1p_AA_ENG_2.bag  list_of_bags.json
test/simple_bags/1p_AA_DIS_1/: 1p_AA_DIS_1.db3  metadata.yaml
test/simple_bags/1p_AA_DIS_2/: 1p_AA_DIS_2.db3  metadata.yaml
test/simple_bags/1p_AA_ENG_1/: 1p_AA_ENG_1.db3  metadata.yaml
test/simple_bags/1p_AA_ENG_2/: 1p_AA_ENG_2.db3  metadata.yaml
