<?xml version="1.0"?>
<package format="2">
  <name>hri_engagement</name>
  <version>1.2.0</version>
  <description>Engagement detection for ROS4HRI</description>

  <maintainer email="antonio.andriella@pal-robotics.com">Antonio Andriella</maintainer>

  <license>BSD</license>

  <author email="antonio.andriella@pal-robotics.com">Antonio Andriella</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>hri_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

</package>
