<?xml version="1.0"?>
<package format="3">
  <name>hri_engagement</name>
  <version>2.0.1</version>
  <description>Engagement detection for ROS4HRI</description>
  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>
  <license>Apache License 2.0</license>
  <author email="antonio.andriella@pal-robotics.com">Antonio Andriella</author>
  <author email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</author>
  <author email="luka.juricic@pal-robotics.com">Luka Juricic</author>

  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>hri_actions_msgs</exec_depend>
  <exec_depend>hri_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_pal</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>pyhri</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>python3-transforms3d</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend version_gt="0.25.3">python3-pandas</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>rosgraph_msgs</test_depend>
  <test_depend>tf2_ros_py</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
